[package]
name = "libnu"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"
description = "A library for developing userspace applications for Novusk"
readme = "README.md"
repository = "https://github.com/new-kernel/libnu/"
license = "MIT"

[workspace]
members = [
    "desktop/",
    "io/",
    "ktypes/",
]

[dependencies]
# Workspace
desktop = { path = "desktop/" }
io = { path = "io/" }
ktypes = { path = "ktypes/" }
# Dependencies
rlibc = "1.0.0"
uefi-graphics = { git = "https://github.com/NathanMcMillan54/uefi-graphics" }
