[package]
name = "libnu"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"
description = "A library for developing userspace applications for Novusk"
readme = "README.md"
repository = "https://github.com/new-kernel/libnu/"
license = "MIT"

[dependencies]
ctypes = { git = "https://github.com/new-kernel/novusk", path = "include/ctypes/" }
uefi = "0.8.1"

[dependencies.novusk_syscalls]
version = "0.1.0"
features = ["novusk_uefi"]
